Nav overflow fix on mobile pt 18

--- a/blocks/src/blocks/mobile-container/style.scss
+++ b/blocks/src/blocks/mobile-container/style.scss
@@ -109,8 +109,13 @@
 
     @media (max-width: 768px) {
         overflow-y: scroll;
-        height: 100vh;
-        height: 100svh;
+        // height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: auto;
     }
 }
 
